plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.greenkitchen'
version = '0.0.1'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
    maven { url = uri('https://repo.spring.io/milestone') }
    maven { url = uri('https://repo.spring.io/snapshot') }
    maven {
        url = uri('https://central.sonatype.com/repository/maven-snapshots/')
    }
}

dependencies {
implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44
	implementation("com.cloudinary:cloudinary-http44:1.39.0")
	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '6.2.1'
// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	//Mapper
	implementation 'org.modelmapper:modelmapper:3.2.0'
	//DotEnv
	implementation 'io.github.cdimascio:dotenv-java:3.0.1'
	// Google OAuth2 - dependencies chính xác
	implementation 'com.google.api-client:google-api-client:2.7.0'
	implementation 'com.google.oauth-client:google-oauth-client:1.36.0'
	implementation 'com.google.http-client:google-http-client-jackson2:1.45.0'

	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	// Spring AI
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.1")
	implementation "org.springframework.ai:spring-ai-starter-model-openai"
	//WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	
	// PayPal SDK
	implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'
    
}

tasks.named('test') {
	useJUnitPlatform()
}

// Ensure parameter names are preserved for Spring framework
tasks.withType(JavaCompile) {
	options.compilerArgs += ['-parameters']
}
